--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.github.mdr</groupId>
     <artifactId>maven-dependencygraph-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>Maven Dependency Graph Plugin</name>
     <description>Generates a text representation (e.g. ASCII-art) of a dependency graph</description>
     <url>https://github.com/mdr/maven-graph-plugin</url>
